prevent image overflow

--- a/app/assets/stylesheets/refinery/calendar/default.css
+++ b/app/assets/stylesheets/refinery/calendar/default.css
@@ -57,6 +57,10 @@
 	font-style: italic;
 }
 
+.thing-description img {
+	max-width: 100%;
+}
+
 /* event */
 
 a.ical {
